# euler-editor

./: AGENTS.md  CLAUDE.md  README.md  index.html  package.json
.github/workflows/: release.yml
docs/: README.md  architecture.md  development.md  overview.md  user-guide.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compiler.rs  config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: cli.rs  compile.rs  file_ops.rs  fonts.rs  mod.rs  settings.rs  theme.rs
src/components/: CommandPalette.tsx  CompileIndicator.tsx  Editor.tsx  FileTree.tsx  PdfPreview.tsx  QuickOpen.tsx
src/hooks/: useCliArgs.ts  useCompiler.ts  useFileOperations.ts  useFileTree.ts  useKeyboardShortcuts.ts  useSettings.ts  useTheme.ts
src/lib/: latex-language.ts  latex-snippets.ts  tauri-commands.ts
src/styles/: fonts.ts  global.css  monaco-theme.ts  themes.ts
src/types/: index.ts
