[package]
name = "euler"
version = "0.1.0"
description = "A live LaTeX editor"
authors = ["you"]
edition = "2021"

[lib]
name = "euler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-cli = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs"] }
tempfile = "3"
dirs = "6"
thiserror = "2"
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
